# dataclass-fixtures-generator

./: .gitignore  README.md  dataclass-fixtures-generator.todo.md  pyproject.toml
.github/workflows/: python-package.yml
src/fixtures_generator/: __init__.py  attrs_fixtures.py  attrs_fixtures_generator.py  dataclass_fixtures.py  dataclass_fixtures_generator.py  factory_fixtures.py  pydantic_fixtures.py  pydantic_fixtures_generator.py
tests/: pytest__attrs_fixtures_generator.py  pytest__dataclass_fixtures_generator.py  pytest__init.py  pytest__pydantic_fixtures_generator.py
