# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dataclass-fixtures-generator"
version = "1.0.3"
description = "Fixtures generator for attrs, dataclasses and pydantic"
readme = "README.md"
authors = [{ name = "Pavel Shmakov", email = "shmakovpn@yandex.ru" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = []
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ['tomli; python_version < "3.11"', "pip-tools", "pytest", "coverage", "build"]

[project.urls]
Homepage = "https://github.com/shmakovpn/dataclass-fixtures-generator"
